jump on mac desktop to make corrections on the grid margins/paddings using a bigger screen

--- a/src/styles.css
+++ b/src/styles.css
@@ -250,24 +250,34 @@ summary {
 }
 
 .content-images {
-  margin: 0px 40px;
+  padding: 70px 100px;
 }
 
 .grid-images {
   display: grid;
   grid-gap: 5px;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-auto-rows: 300px;
+  grid-template-columns: repeat(auto-fit, minmax(330px, 1fr));
+  /*grid-auto-rows: 330px;*/
   justify-content: center;
   grid-auto-flow: dense;
+  position: relative;
+
+  /*430
+  300*/
+
+  margin: auto;
+  max-width:1300px;
+}
+
+.img-gallery-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .img-gallery-item img {
   height: 300px;
   width:320px;
-}
-
-.img-gallery-item1 {
 
 }
 
